--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mygdx.game" >
     <uses-permission android:name="android.permission.wake_lock"></uses-permission>
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true"></uses-feature>
-    <uses-feature android:name="android.hardware.sensor.compass" android:required="true"></uses-feature>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
